--- a/assets/scss/_btn.scss
+++ b/assets/scss/_btn.scss
@@ -1,30 +1,6 @@
 @import 'typography';
 @import 'mixin';
 
-@mixin fill-btn($bg-color, $text-color) {
-    @include reset-btn;
-    color: $text-color;
-    padding: 1.3rem 5rem;
-    background-color: $bg-color;
-    border-radius: 25px;
-    position: relative;
-    z-index: 1;
-    &::after {
-        content: '';
-        position: absolute;
-        background-color: $bg-color;
-        border-radius: 25px;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: -1;
-    }
-    &:hover::after {
-        animation: glow .5s ease forwards;
-    }
-}
-
 .fill-btn-primary {
     @include fill-btn($ORANGE, $WHITE);
 }
