--- a/assets/scss/_explore.scss
+++ b/assets/scss/_explore.scss
@@ -23,7 +23,7 @@
 
 .explore-card {
     flex: 1 1 20%;
-    @media (max-width: 75em) {
+    @media (max-width: 87.5em) {
         flex: 1 1 45%;
     }
     
