--- a/assets/scss/_services.scss
+++ b/assets/scss/_services.scss
@@ -14,7 +14,7 @@
 .service-card {
     flex: 1 1 20%;
     position: relative;
-    @media (max-width: 75em) {
+    @media (max-width: 87.5em) {
         flex: 1 1 45%;
     }
 
